<resources>
    <string name="app_name">mad_23012531040_pratical_3</string>
    <string name="app_title">GUNI</string>
    <string name="email_label">Email Id</string>
    <string name="password_label">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
</resources>